--- a/Histroy/Histroy.vcxproj
+++ b/Histroy/Histroy.vcxproj
@@ -95,6 +95,9 @@
   <ItemGroup>
     <ClInclude Include="src\Core.h" />
     <ClInclude Include="src\Engine\Events\Event.h" />
+    <ClInclude Include="src\Engine\Events\KeyEvents.h" />
+    <ClInclude Include="src\Engine\Events\MouseEvents.h" />
+    <ClInclude Include="src\Engine\Events\WindowEvents.h" />
     <ClInclude Include="src\Histroy.h" />
     <ClInclude Include="src\hspch.h" />
     <ClInclude Include="src\Engine\Window\Window.h" />
