--- a/Histroy/Histroy.vcxproj
+++ b/Histroy/Histroy.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="src\Engine\Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Application\Application.h" />
     <ClInclude Include="src\Core.h" />
     <ClInclude Include="src\Engine\Events\Event.h" />
     <ClInclude Include="src\Engine\Events\KeyEvents.h" />
