--- a/Histroy/Histroy.vcxproj
+++ b/Histroy/Histroy.vcxproj
@@ -88,6 +88,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Engine\GUI\Renderer\HistroyRenderer.cpp" />
+    <ClCompile Include="src\Engine\GUI\Menus\Menus.cpp" />
     <ClCompile Include="src\Application\Application.cpp" />
     <ClCompile Include="src\Engine\GUI\imgui\HistroyGui.cpp" />
     <ClCompile Include="src\hspch.cpp" />
@@ -109,6 +111,8 @@
     <ClCompile Include="src\vendor\sgl\VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Engine\GUI\Renderer\HistroyRenderer.h" />
+    <ClInclude Include="src\Engine\GUI\Menus\Menus.h" />
     <ClInclude Include="src\Application\Application.h" />
     <ClInclude Include="src\Core.h" />
     <ClInclude Include="src\Engine\Events\Event.h" />
