--- a/Histroy/imgui.ini
+++ b/Histroy/imgui.ini
@@ -13,3 +13,23 @@ Pos=60,60
 Size=210,167
 Collapsed=0
 
+[Window][TEST]
+Pos=60,60
+Size=226,54
+Collapsed=0
+
+[Window][Add New]
+Pos=60,60
+Size=80,54
+Collapsed=0
+
+[Window][Main Menu]
+Pos=202,170
+Size=142,54
+Collapsed=0
+
+[Window][Add]
+Pos=60,60
+Size=332,192
+Collapsed=0
+
