Modifiable Geometry Location

--- a/Histroy/imgui.ini
+++ b/Histroy/imgui.ini
@@ -33,3 +33,33 @@ Pos=60,60
 Size=332,192
 Collapsed=0
 
+[Window][Add new Triangle]
+Pos=60,60
+Size=75,77
+Collapsed=0
+
+[Window][2]
+Pos=447,365
+Size=262,48
+Collapsed=0
+
+[Window][1]
+Pos=205,377
+Size=201,48
+Collapsed=0
+
+[Window][Add new tringle]
+Pos=60,60
+Size=75,77
+Collapsed=0
+
+[Window][Menu]
+Pos=137,59
+Size=375,140
+Collapsed=0
+
+[Window][Properties]
+Pos=73,437
+Size=463,360
+Collapsed=0
+
