--- a/Histroy/imgui.ini
+++ b/Histroy/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=269,85
+Size=629,400
 Collapsed=0
 
 [Window][Hello]
@@ -61,5 +61,10 @@ Collapsed=0
 [Window][Properties]
 Pos=0,250
 Size=250,350
+Collapsed=0
+
+[Window][The World]
+Pos=0,20
+Size=250,230
 Collapsed=0
 
