--- a/Histroy/Histroy.vcxproj
+++ b/Histroy/Histroy.vcxproj
@@ -88,6 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Engine\GUI\Renderer\Elements\Square.cpp" />
     <ClCompile Include="src\Engine\GUI\Renderer\Elements\Geometry.cpp" />
     <ClCompile Include="src\Engine\GUI\Renderer\HistroyRenderer.cpp" />
     <ClCompile Include="src\Engine\GUI\Menus\Menus.cpp" />
@@ -113,6 +114,7 @@
     <ClCompile Include="src\Engine\GUI\Renderer\Elements\Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Engine\GUI\Renderer\Elements\Square.h" />
     <ClInclude Include="src\Engine\GUI\Renderer\Elements\Geometry.h" />
     <ClInclude Include="src\Engine\GUI\Renderer\HistroyRenderer.h" />
     <ClInclude Include="src\Engine\GUI\Menus\Menus.h" />
