--- a/Histroy/Histroy.vcxproj
+++ b/Histroy/Histroy.vcxproj
@@ -88,6 +88,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Engine\GUI\CodeTiles\EventTile.cpp" />
+    <ClCompile Include="src\Engine\GUI\CodeTiles\Program\Program.cpp" />
     <ClCompile Include="src\Engine\GUI\CodeTiles\CodeTile.cpp" />
     <ClCompile Include="src\Engine\GUI\Renderer\Elements\Square.cpp" />
     <ClCompile Include="src\Engine\GUI\Renderer\Elements\Geometry.cpp" />
@@ -116,6 +118,9 @@
     <ClCompile Include="src\Engine\GUI\CodeTiles\ValueTile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Engine\Events\ApplicationEvents.h" />
+    <ClInclude Include="src\Engine\GUI\CodeTiles\EventTile.h" />
+    <ClInclude Include="src\Engine\GUI\CodeTiles\Program\Program.h" />
     <ClInclude Include="src\Engine\GUI\CodeTiles\CodeTile.h" />
     <ClInclude Include="src\Engine\GUI\Renderer\Elements\Square.h" />
     <ClInclude Include="src\Engine\GUI\Renderer\Elements\Geometry.h" />
