--- a/Histroy/Histroy.vcxproj.filters
+++ b/Histroy/Histroy.vcxproj.filters
@@ -102,6 +102,12 @@
     <ClCompile Include="src\Engine\GUI\CodeTiles\BeginPlayTile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Engine\GUI\CodeEditor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Engine\GUI\CodeTiles\TickTile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\hspch.h">
@@ -1071,6 +1077,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Engine\GUI\CodeTiles\BeginPlayTile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\GUI\CodeEditor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Engine\GUI\CodeTiles\TickTile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
