--- a/Histroy/imgui.ini
+++ b/Histroy/imgui.ini
@@ -73,3 +73,18 @@ Pos=60,60
 Size=45,54
 Collapsed=0
 
+[Window][Nee]
+Pos=60,60
+Size=45,54
+Collapsed=0
+
+[Window][Jij]
+Pos=60,60
+Size=45,54
+Collapsed=0
+
+[Window][Code Editor]
+Pos=499,422
+Size=618,291
+Collapsed=0
+
