--- a/Histroy/Histroy.vcxproj
+++ b/Histroy/Histroy.vcxproj
@@ -88,6 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Engine\GUI\CodeTiles\MoveToTile.cpp" />
     <ClCompile Include="src\Engine\GUI\CodeEditor.cpp" />
     <ClCompile Include="src\Engine\GUI\CodeTiles\BeginPlayTile.cpp" />
     <ClCompile Include="src\Engine\GUI\CodeTiles\EventTile.cpp" />
@@ -121,6 +122,7 @@
     <ClCompile Include="src\Engine\GUI\CodeTiles\TickTile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Engine\GUI\CodeTiles\MoveToTile.h" />
     <ClInclude Include="src\Engine\GUI\CodeEditor.h" />
     <ClInclude Include="src\Engine\GUI\CodeTiles\BeginPlayTile.h" />
     <ClInclude Include="src\Engine\Events\ApplicationEvents.h" />
