--- a/Histroy/Histroy.vcxproj
+++ b/Histroy/Histroy.vcxproj
@@ -89,7 +89,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Engine\GUI\CodeTiles\MoveToTile.cpp" />
-    <ClCompile Include="src\Engine\GUI\CodeEditor.cpp" />
+    <ClCompile Include="src\Engine\GUI\CodeHandler.cpp" />
     <ClCompile Include="src\Engine\GUI\CodeTiles\BeginPlayTile.cpp" />
     <ClCompile Include="src\Engine\GUI\CodeTiles\EventTile.cpp" />
     <ClCompile Include="src\Engine\GUI\CodeTiles\Program\Program.cpp" />
@@ -123,7 +123,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Engine\GUI\CodeTiles\MoveToTile.h" />
-    <ClInclude Include="src\Engine\GUI\CodeEditor.h" />
+    <ClInclude Include="src\Engine\GUI\CodeHandler.h" />
     <ClInclude Include="src\Engine\GUI\CodeTiles\BeginPlayTile.h" />
     <ClInclude Include="src\Engine\Events\ApplicationEvents.h" />
     <ClInclude Include="src\Engine\GUI\CodeTiles\EventTile.h" />
