--- a/Histroy/Histroy.vcxproj
+++ b/Histroy/Histroy.vcxproj
@@ -88,6 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Engine\GUI\CodeTiles\ExecutableTile.cpp" />
     <ClCompile Include="src\Engine\Layers\GameLayer.cpp" />
     <ClCompile Include="src\Engine\GUI\CodeTiles\MoveToTile.cpp" />
     <ClCompile Include="src\Engine\GUI\CodeHandler.cpp" />
@@ -123,6 +124,7 @@
     <ClCompile Include="src\Engine\GUI\CodeTiles\TickTile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Engine\GUI\CodeTiles\ExecutableTile.h" />
     <ClInclude Include="src\Engine\Layers\GameLayer.h" />
     <ClInclude Include="src\Engine\GUI\CodeTiles\MoveToTile.h" />
     <ClInclude Include="src\Engine\GUI\CodeHandler.h" />
