Code Tile details editable (Bugs)

--- a/Histroy/imgui.ini
+++ b/Histroy/imgui.ini
@@ -84,7 +84,17 @@ Size=45,54
 Collapsed=0
 
 [Window][Code Editor]
-Pos=709,333
-Size=549,555
+Pos=895,328
+Size=673,503
+Collapsed=0
+
+[Window][Details]
+Pos=750,432
+Size=508,227
+Collapsed=0
+
+[Window][Omade]
+Pos=60,60
+Size=32,35
 Collapsed=0
 
